--- a/index.html
+++ b/index.html
@@ -52,7 +52,43 @@
     </div>
 </div>
 </section>
-
+<!-- what i do section -->
+<section class="what-i-do">
+    <h3 class="section-title">What I Do</h3>
+    <!-- .skill-container>skill*4>img+p.skill-title+p.skill-description>lorem15 -->
+    <div class="skill-container">
+        
+        <div class="skill">
+            <img src="Images/icons/js.png" alt="">
+            <p class="skill-title">Vanilla JavaScript</p>
+            <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor..</p>
+        </div>
+       <div class="skill"> 
+            <img src="Images/icons/react.png" alt="">
+            <p class="skill-title">React</p>
+            <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skill">
+            <img src="Images/icons/nodejs.png" alt="">
+            <p class="skill-title">Node.js</p>
+            <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+       </div>
+      <div class="skill">
+            <img src="Images/icons/mongo.png" alt="">
+            <p class="skill-title">MongoDB</p>
+            <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+ 
+    </div>
+</section>
+<!-- rsume section -->
+<section class="resume">
+    <h3 class="section-title">A summary of My Resume</h3>
+    <div class="resume-content">
+        <div>
+            
+        </div>
+    </div>
+</section>
         </main>
         <footer>
 
