contact us addeded

--- a/index.html
+++ b/index.html
@@ -85,9 +85,77 @@
     <h3 class="section-title">A summary of My Resume</h3>
     <div class="resume-content">
         <div>
+            <h3 class="resume-title">My Education</h3>
+            <div class="resume-item">
+                <h4 class="title">Intermediet in Business Study</h4>
+                <h5 class="sub-title">Sher-E Bangla Nagar Govt. Boys High School & College / 2018 - 2020</h5>
+                <p class="description">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <hr>
+            <div class="resume-item">
+                <h4 class="title">Ssc in Business Study</h4>
+                <h5 class="sub-title">Jhatibunia M.I Secondary High School / 2013 - 2018</h5>
+                <p class="description">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <hr>
+            <div class="resume-item">
+                <h4 class="title">Psc</h4>
+                <h5 class="sub-title">Chailabunia Govt. Primary School</h5>
+                <p class="description">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+        
+        </div>
+        <div>
+            <h3 class="resume-title">My Experience</h3>
+            <div class="resume-item">
+                <h4 class="title">Sr. Font End Developer</h4>
+                <h5 class="sub-title">Apple Inc / 2020 - Current</h5>
+                <p class="description">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <hr> <div class="resume-item">
+                <h4 class="title">Jr. Font End Developer</h4>
+                <h5 class="sub-title">Dribbble Inc / 2018 - 2022</h5>
+                <p class="description">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <hr> <div class="resume-item">
+                <h4 class="title">HTML Developer</h4>
+                <h5 class="sub-title">Adobe Inc / 2017 - 2018</h5>
+                <p class="description">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
             
         </div>
     </div>
+    <div class="resume-button">
+        <button class="btn-primary">Download CV</button>
+    </div>
+</section>
+<!-- contact setion -->
+<section class="contact">
+<div>
+    <h3 class="section-title">Let's Connect</h3>
+    <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+ <!--    <a href="https://www.facebook.com/shahriar.jisan.10">facebook</a> -->
+    <img src="/Images/icons/facebook.png" alt="">
+    <a href=""></a>
+    <img src="Images/icons/twitter.png" alt="">
+    <a href=""></a>
+    <img src="/Images/icons/insta.png" alt="">
+</div>
+
+<div><h3 class="section-title">Let's Message me</h3>
+    <form action="">
+        <input type="text" name="" id="" placeholder="Your Name">
+        <input type="email" placeholder="Your Email">
+        <textarea name="" id="" cols="30" rows="10" placeholder="Tell me your future plan"></textarea>
+        <input class="btn-primary" type="submit" value="Submit">
+    </form>
+</div>
 </section>
         </main>
         <footer>
